question-10/cafe-newpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cafe-newpod
  labels:
    drink: cafe
  namespace: question-10
spec:
  containers:
  - name: cafe
    image: r.deso.tech/dockerhub/nicolaka/netshoot
    command:
    - sleep
    - 100000000
