question-10/cappuccino-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cappuccino-pod
  labels:
    drink: cappuccino
  namespace: question-10
spec:
  containers:
  - name: cappuccino
    image: r.deso.tech/dockerhub/library/nginx:1
    ports:
    - containerPort: 80
